# Snake

./: CMakeLists.txt  README.md
.github/workflows/: Snake-SDL2-CI.yml
lib/: header.hpp
src/: draw.cpp  highscore.cpp  init.cpp  input.cpp  main.cpp  score.cpp
